# wrale-radiate

./: .gitignore  Dockerfile.display  Dockerfile.webapp  Makefile  README.md  TODO.md  docker-compose.yml  next.config.js
app/api/ws/: route.ts
display/: package.json
display/src/app/: layout.tsx  page.tsx
display/src/components/: DisplayClient.tsx  VideoPlayer.tsx  WSTest.tsx
docs/: DEMO.md
docs/anda/: README.md  hybrid_approach.md  index.md  interactions.md  steel-thread.mmd
docs/anda/actors/: README.md  display.md  index.md  it-ops.md  marketing.md
docs/anda/actors/composer/: README.md
docs/anda/actors/display/: README.md
docs/anda/capabilities/: asset-lib.md  health.md  renderer.md  transport.md
docs/anda/changelog/: 2024-03-14-1522-initial-structure.md  2024-03-14-initial-structure.md  README.md
docs/anda/decisions/: README.md  steel-thread.md
docs/anda/interactions/: README.md
docs/anda/resources/: README.md
docs/anda/states/: README.md
docs/development/: SETUP.md  VIDEO_SUPPORT.md
docs/operations/: DEPLOYMENT.md
server/: Cargo.toml  Dockerfile
server/src/: app.rs  main.rs  state.rs  websocket.rs
server/src/handlers/: health.rs  mod.rs  ws.rs
webapp/: middleware.ts  next-env.d.ts  next.config.js  package.json  tsconfig.json
webapp/src/: middleware.ts
webapp/src/app/: layout.tsx  page.tsx
webapp/src/components/: ContentUpload.tsx  HealthDashboard.tsx
webapp/src/hooks/: useWebSocket.ts
webapp/src/lib/: socket.ts  types.ts  websocket-server.ts  websocket.ts
webapp/src/types/: next.d.ts  ws.d.ts
(+16 files in other folders)
